# astrocyte-local

./: .gitignore  README.md
.github/workflows/: publish-npm.yml  publish-pypi.yml  publish.yml
astrocyte-local-py/: README.md  pyproject.toml
astrocyte-local-py/astrocyte_local/: __init__.py  cli.py  context_tree.py  curated_retain.py  engine.py  mcp.py  search.py  tiered_retrieval.py
astrocyte-local-py/tests/: conftest.py  test_context_tree.py  test_curated_retain.py  test_engine.py  test_integration.py  test_search.py  test_tiered_retrieval.py
astrocyte-local-rs/: Cargo.toml
astrocyte-local-rs/src/: main.rs
astrocyte-local-ts/: package.json  pnpm-lock.yaml  tsconfig.json
astrocyte-local-ts/src/: cli.ts  context-tree.ts  curated-retain.ts  index.ts  mcp-server.ts  search.ts  tiered-retrieval.ts  types.ts
astrocyte-local-ts/tests/: context-tree.test.ts  curated-retain.test.ts  mcp-server.test.ts  search.test.ts  tiered-retrieval.test.ts
docs/: README.md  cli-reference.md  context-tree-format.md  mcp-tools.md  search-contract.md
