[package]
name = "astrocyte-local"
version = "0.1.0"
edition = "2024"
description = "Zero-infrastructure memory for AI coding agents — Context Tree + FTS5 search"
license = "Apache-2.0"
repository = "https://github.com/AstrocyteAI/astrocyte-local"

[dependencies]
# TODO: Add dependencies in Phase 3
# rusqlite = { version = "0.32", features = ["bundled"] }  # SQLite FTS5
# serde = { version = "1", features = ["derive"] }
# serde_yaml = "0.9"
# serde_json = "1"
# clap = { version = "4", features = ["derive"] }          # CLI
# tokio = { version = "1", features = ["full"] }

[dev-dependencies]
# tempfile = "3"

[[bin]]
name = "astrocyte-local"
path = "src/main.rs"
